--- a/css/styles.css
+++ b/css/styles.css
@@ -32,3 +32,12 @@ body{
     background-color: #512dab;
     
 }
+.navbar-dark{
+    background-color: #512dab
+}
+.tab-content{
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
